styles/globals.css
/* @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"); */
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
  .nav-link {
    @apply relative font-semibold text-white cursor-pointer 
    text-[16px] w-fit md:block after:block after:content-[''] 
    after:absolute after:h-[3px] after:bg-yellow-400 after:w-full 
    after:scale-x-0 after:hover:scale-x-100 after:transition 
    after:duration-300 after:origin-center hidden;
  }
  .nav-link-mobile {
    @apply relative mb-[2rem] font-semibold text-white cursor-pointer text-[26px] w-fit md:block after:block after:content-[''] after:absolute after:h-[3px] after:bg-yellow-400 after:w-full after:scale-x-0 after:hover:scale-x-100 after:transition after:duration-300 after:origin-center;
  }
  .heading {
    @apply text-center text-white text-[28px] sm:text-[33px] md:text-[45px] font-bold uppercase;
  }
  .project-item {
    @apply transform cursor-pointer hover:-translate-y-6 
        transition-all duration-200 relative w-[100%] h-[350px] 
        md:h-[450px] lg:h-[500px];
  }
  .project-skill {
    @apply mr-2 last:mr-0 text-base font-medium text-[#1a202c]
        dark:text-[#edf2f7] list-none bg-[#1a202c]/10 font-semibold 
        text-[#1a202c]/95 dark:bg-[#edf2f7]/10 dark:text-[#edf2f7]/95 
        duration-300 hover:bg-[#1a202c]/[0.175] hover:dark:bg-[#edf2f7]/[0.175] 
        rounded-lg px-2 py-1 my-auto text-sm mt-[1rem];
  }
  .project-icon {
    @apply text-gray-800 invert cursor-pointer hover:text-blue-500 hover:invert-0;
  }
  
  .external-links{
    @apply relative font-semibold text-white cursor-pointer 
    text-[16px] w-fit md:inline-block after:block after:content-[''] 
    after:absolute after:h-[3px] after:bg-yellow-400 after:w-full 
    after:scale-x-0 after:hover:scale-x-100 after:transition 
    after:duration-300 after:origin-center after:bottom-[-3px]
    hover:invert transition duration-700;
  }
}

